[project]
name = "wdb-backend"
version = "0.1.0"
description = "Lokale Wissens- und Analyseplattform – FastAPI Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    # ORM / DB
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    "aiosqlite>=0.20,<1.0",
    # Validation / Settings
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    # Parsing
    "pypdf2>=3.0,<4.0",
    "python-docx>=1.1,<2.0",
    "chardet>=5.2,<6.0",
    # HTTP (Ollama-Client)
    "httpx>=0.27,<1.0",
    # Neo4j (Stub Phase 1, aktiv Phase 2)
    "neo4j>=5.20,<6.0",
    # Utilities
    "python-multipart>=0.0.9",
    "structlog>=24.1,<25.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
